--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ddd-app
 
 
 # DB Settings
-spring.datasource.url=jdbc:h2:mem:ddd_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIST=FALSE
+spring.datasource.url=jdbc:h2:mem:ddd_db;
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
